
5.2b1 -> 5.3a1
    - jbj: add --with-db-sql.
    - jbj: permit building with db-4.7.25.
    - jbj: rpmfi: add a getter for _fnbf;
    - jbj: xar: rescuscitate --with-xar=external (using xar-1.5.2).
    - jbj: bash: rescuscitate --with-bash=internal.
    - jbj: tests: add genpgp.sh/tpgp test(s) for DSA/RSA clearsigned plaintext.
    - jbj: lua: install executables and library.
    - jbj: perl: change --macros to point to ../macros/macros now.
    - jbj: verify: fix: no parent txn running %verifyscript/%sanitycheck.
    - jbj: rpmfi: fix: memory leak running %pretrans.
    - jbj: rpmdb: fix: add proper rc for RPMTAG_FILEPATHS w no files.
    - jbj: augtool: add error checking.
    - jbj: augeas: fix: aug_match no longer returns matches with argv sentinel.
    - jbj: js: fix: sort out module <-> library targets.
    - jbj: js: fix: make dependencies prevented "make distcheck".
    - jbj: ruby: rescusitate.
    - jbj: i18n: update po files (Translation Project).
    - jbj: i18n: update POTFILES.in.
    - jbj: js: fix: give print() a "" return value instead of JSVAL_VOID.
    - jbj: cli: fix: --eval could access before beginning of array.
    - jbj: ficl: resurrect as --with-ficl=internal. external is wonky w no *.la.
    - jbj: perl: rescuscitate embedding (w /etc/ld.so.conf.d/perl.conf assist).
    - jbj: js: build jscpucfg/jskwgen helpers w/o libtool assistance.
    - jbj: lua: build bin2c helper w/o libtool assistance.
    - jbj: rc: rescusictate.
    - jbj: macros: add a few more rpm-peculier execuctables.
    - jbj: mtree: avoid mtime.tv_usecs differences for now.
    - jbj: pubkeys: fix: all headers, including pubkeys, need PACKAGECOLOR.
    - jbj: pubkeys: fix: rpmdbAdd() needs to be transactionally protected.
    - jbj: cudf: fiddle up some methods for cudftool-equiv in JS.
    - jbj: cudf: move rpmcudp/rpmcudv typedef's and structures into rpmcudf.h.
    - jbj: cudf: add JS methods and some silly unit tests.