@@ -1,3 +1,103 @@
+md2:282dfab3e3dbe752f3b60944d1789e20  ref/DB_CONFIG
+md4:fbbdf57b4121b7ce7847babccf49c5fb  ref/DB_CONFIG
+md5:12a60bd4b49ae60db6a711f01830d426  ref/DB_CONFIG
+sha1:5c6c84d41328289f3015f464a4212058781ce133  ref/DB_CONFIG
+sha224:eedc473a8b2383a45b45a70ab95c4b5295a234a32d361989fbfda7ab  ref/DB_CONFIG
+sha256:0a736b31e85418708bad03eb1c8092af7c816b3c6d9e4cab6785b83692913e68  ref/DB_CONFIG
+sha384:916ef925428f9a80d66f5b86ad0ee804071e10f0195e295ff8d00f24b8db63a64bfb614702e07bf5a874e85a7c777a87  ref/DB_CONFIG
+sha512:717645577d43527b66c59c0dd5e190062672cdb8c18fb762e2b18ac52491d805fa3f4b2bb5f4f532d7db5a52db5ac401fcc7e65eedfbb2a64e3093cb7889cfe6  ref/DB_CONFIG
+skein-224:6bc967d25f821685f93e47158c925110a52650ce240df95ab769ec59  ref/DB_CONFIG
+skein-256:71d1d6eacacefa3122c697dcea7505ef501252376fbffa11af0b25181b24ce7a  ref/DB_CONFIG
+skein-384:8e6ab5b81d7509d165422166cc1661cfdd1da8b28e0fc3483d245a80a6cd2afb700453f762e170de6620a7babe91a2e2  ref/DB_CONFIG
+skein-512:6e44c064124f48bba6014733bf57eed847c4486dd68f98e9e991180331c5f4734e32b49568b38fbf7b684c150ead6d34ca5f7b5176e06ac2f6595589fc7e4a66  ref/DB_CONFIG
+skein-1024:0af5cba981884eed0e5a2d458d930d302caf2d9ab45440cbd29b4c5b25bcacd7f4bac1697021d3aa1c2ca77fc4b2a792385800d66ac8002fcbc590d3aa80372c8cc52654d2c15db3cef8eea6e68ac6aba4660d4ecd7c35a46dd58b07d870c128e3295b61ce395acbb89d649653f2a8b78845b2d4e1c9668d3bf6aad4ae43bd82  ref/DB_CONFIG
+arirang-224:9eaebc1e282111f70396acccd5fff507f46b48bf267b3ab6c5b102de  ref/DB_CONFIG
+arirang-256:c7141e41c273a768eca68bef0a94aea25b0ff01154a8db6b52f557e0bd190fd4  ref/DB_CONFIG
+arirang-384:af5cfed654cbec92fdf6dc44ef848efb82fa122231c395c063b5600a86f3260c8cd23bd57d18b7e720aa8c24422b1b7d  ref/DB_CONFIG
+arirang-512:a5e8bf8ceb6613c7d47e0f18206dbf83fe956f1b89f9745579d3161630b574adeec566f8b117f2a4bf237bf4cbc314785e8c70a2b584c7183e04574cb156c159  ref/DB_CONFIG
+blake-224:9472f645342100349af169e7ea7dddeeff891bcfe01747f6b814c375  ref/DB_CONFIG
+blake-256:2f4cc083c8acdcbcdc0f725d18533e40e2d359922aa528c4ff1465e0a926b5a7  ref/DB_CONFIG
+blake-384:07bd7c49367f4112f05c083bdcd8bfb60537bb63ea6795d1ea04a922b8476b701ca55cdb8ecd8dceec10012c897a54a2  ref/DB_CONFIG
+blake-512:f9863559ebcebbad2670b3a4ee5fcd616f4ff7bd4ceafcc79394d51ff7c4a9623e1e2f04ecadf921128b7399c9ca2caeba5ac800687bb144a766cf134a2f5712  ref/DB_CONFIG
+bmw-224:e2366f0d6181942bda1261c7a57d41b07122d9bafa1ab9bac107b60e  ref/DB_CONFIG
+bmw-256:19a0be5a22332559f85dd7df9dffd4ea73edac598b2146bcf78bc8f685130a0a  ref/DB_CONFIG
+bmw-384:7fc923cab537c255864e5ff9c12f43c5a1a52974af7584c6c66aa10f2ed553cc3686486124b75f3981f7762ff57bb7e8  ref/DB_CONFIG
+bmw-512:33ac08916f255a979257952b5604d9e128986aab6e8204f15a75952f49a1722f3f4b929500634a297f1594e5f203faeec98de26157da162b1415412f4334edff  ref/DB_CONFIG
+chi-224:6c45508fb382037941f80ff7d72863e07b74421ed93d6fa623a8eb85  ref/DB_CONFIG
+chi-256:9eeb1edb78aa0009ccc67d8dddfdccf7a3dd9cc849c09be684907a9bb8686d93  ref/DB_CONFIG
+chi-384:b3db97690324f5fbf694011156265a662ce59235f5bf671d1475dc25a09687079d53ae5e5ab17800c2a92d2b78183669  ref/DB_CONFIG
+chi-512:b20eb0603195ed8d0af69c4fa869c07e0cfdc1c44d6b8b379c0f67953e51649097ad17b6add5cef1825f28304a372c176d4d3d05554fb3844310aa82e1f25557  ref/DB_CONFIG
+cubehash-224:fde918cea30b0bf87a95561ff43009bfe4148007b72dd3c6f9fe5782  ref/DB_CONFIG
+cubehash-256:5ff150b2d9338c6b62c38ed09696f2f84c3e5e23d4de8bea62b6b60184d7eb81  ref/DB_CONFIG
+cubehash-384:43081d6c79e929f91673d9996892cef2993a35675fab23b75d26b4037e5ca6710bd947f10a0530a1641315803f35c57f  ref/DB_CONFIG
+cubehash-512:7eac6269b6db67703c44ae612493dd292f27a6fea5088eb750b5fc4efd84e368b2bb27078006aca9b3bbdc8c7e5db84402118bb72ac14a522e52693cff5daf7b  ref/DB_CONFIG
+echo-224:02d41f6a661f314fb9ae9ce6faeff70cfb074495703b98116a0a44cb  ref/DB_CONFIG
+echo-256:20a5ddd123a09ab1c876b9ca1faf209d99413497e883076d3e9f39b838eaf0c6  ref/DB_CONFIG
+echo-384:0723050591eaf7c0c5587bdb31f7d637fcc1c7b1e74723f0bc146fa22a9276a5ec0304f534a859f981454889e25bcb0a  ref/DB_CONFIG
+echo-512:8d413475126f4a26760169d8844897e64d0ac892f94dfc5c7581253fcd1cc0606c553dd3420740be77cadd8cf59d926d7a31e5f8aeb8f23e2534ebfc733078f2  ref/DB_CONFIG
+edonr-224:c560ae7cb695fbc505f74e1b7300f08b14d219aed55cb96b5d0f1c10  ref/DB_CONFIG
+edonr-256:2d2ac5d1ae12493b90848c64ed0c63b8f81fcccca7a7bc72a9fccedce0b06df6  ref/DB_CONFIG
+edonr-384:cee15b1a8a0f65eee4d1456966e1f7abf052479352ddba152f7201232f34ccac3747f9ea95f4eb728508410e42873ec1  ref/DB_CONFIG
+edonr-512:451671a2462ae8c197ce158ece02652b4d49ef90133e494cab809eda3fd39023e912eaf000d045dd68a1acdb5d94fc2da24a7f2d13e6d6a8a16aec558daf3e2e  ref/DB_CONFIG
+fugue-224:562e955abb03403aa44e751252e2328375304fbc0bf42c4e76eecdb1  ref/DB_CONFIG
+fugue-256:46721ee6311c5c85428cd50bb5f443d5426d5a09806cfe73ac005d6e65f266b6  ref/DB_CONFIG
+fugue-384:42f4181e39d6fdfd64a990bbe10b002b60329352953716f96f92e377f8cb7805d586233c93d912455b4a084b56093de6  ref/DB_CONFIG
+fugue-512:f0bf49e0d2dc6a361ff7a8dfff01449c3fe2bc7e40d12227040a4c55857e37e2254ddf963f30c7f272b3b9973f3547c6d3b91389c2fbd793fc705aeef408d603  ref/DB_CONFIG
+groestl-224:befb1d4414ddc1d5fddb3ab599a72d3b0f330b5eb5fc761726cbe8ec  ref/DB_CONFIG
+groestl-256:11343b5d7b089aebe4a40845b583edaa2b4811848ab112a578b07a9805c5ea49  ref/DB_CONFIG
+groestl-384:3b654f50ac2ee01283af01f33625e0eec1be4139c1fb14fcf40abce949dd41616edbb9116d481824d7ef67c3c21992a3  ref/DB_CONFIG
+groestl-512:121d54870a2a2b7133dbd34cce739ceeb039eb7e83574203c4a5b8493687b4dcd5274cb6993d662d5e91b5a15ab921279d75932f416c8c8c8cf5baa56543da18  ref/DB_CONFIG
+hamsi-224:eb7f0f5a6d5c3458611801c9073fc8ec97471b121528b3b761e3644a  ref/DB_CONFIG
+hamsi-256:caa04602dd85caa2aeea645e082af7ee486998ef850cd92490b5f559c0d2e3d0  ref/DB_CONFIG
+hamsi-384:550d824d1c3d6658944e2cc188345fae6077a1ddcc74e7ea798b3608b9e620ae602d225f26ea260bfc8ab07bfdede5d8  ref/DB_CONFIG
+hamsi-512:ae42399508039d6a3db1229c1d4643ddfb0afe282ed9a6488c895ac2d683915ca0a51e3e34fd87ded3bf0f1e9c8b72d5d58745e0ea1c3829ea1e0251c8751054  ref/DB_CONFIG
+jh-224:fca8d151a53935780204053cd7b5cecb4ff8ef000e8d72ddca6e277e  ref/DB_CONFIG
+jh-256:cfd292fbf5db766971eed8ef6d72cd9ac6d3bc443c15fdba5a040393f67bd5d5  ref/DB_CONFIG
+jh-384:d4a5281572cbd861a393165d4a8f2d106ac3fbdf6e8e9b1d19626e1e29cf8cd9d14ad4cad1f883302b905682796ed1c8  ref/DB_CONFIG
+jh-512:67a5422d3f1db4969be876f4bb9d5673ed9d2ec38f3e577d46124c7680fb867e6e833b98180d839cf1d058feeac3f17e2094f9835068f0de89f716ebce302477  ref/DB_CONFIG
+keccak-224:445dfeddf9a48a2a4b3a4ac77c16b304bc7d677218c882b914fcac79  ref/DB_CONFIG
+keccak-256:552d944bac70664f4b93d91dafc8d65cc20ea1ede00065fa075c1555745da0c8  ref/DB_CONFIG
+keccak-384:6dfea655dafaecb62c10f20a00a3c0e5a2bcace20bea774e018e8bd00772c0a0270d3292fa49c0171c635fe085650a46  ref/DB_CONFIG
+keccak-512:d3bf79c4472f477a1feafeacc4a519952ddb7da2cd259e3a2b8f7528a00449b82e9816a222db0c7b74bd16818e6226b90dd290b0a8344c2473e625ad4c91693d  ref/DB_CONFIG
+lane-224:6da78f38940b4bf51fbf4bf72333b701f49ae4cb5cd72a347d8418d0  ref/DB_CONFIG
+lane-256:515b44d204b09c87da7f46b86f4f1317d28cbbcc2e0a3e45e3c7f7008217216a  ref/DB_CONFIG
+lane-384:080e92611a3f280085ebf40e56ceb244200a71b504636b091462a131a2657c69ab3f4df888f8d823d4b13629e7ff4a0e  ref/DB_CONFIG
+lane-512:ce05f85a25920538ec01c5d2d12b26ee74bb6340eef5d865ba5131a3ce8d3316c8e9b607b0b54d15cc16a189ba762a8a5da4f7cf9101a27d38d7fc613f558e68  ref/DB_CONFIG
+luffa-224:fa3fe6fc38a11caf3d6e26d34e99607a296700e34edc9a6556cf0781  ref/DB_CONFIG
+luffa-256:fa3fe6fc38a11caf3d6e26d34e99607a296700e34edc9a6556cf0781c0fce20a  ref/DB_CONFIG
+luffa-384:dca3125f7132a034ea54e303f1d564cb00aa84e333c835407aa1eedfcdb954f8dca5b6b6d3cf2297a53e80b86a5417e7  ref/DB_CONFIG
+luffa-512:7167c07b3cbbaf10b5cee5c816ff9f76cee93da577b923001c3c73d78524e83e395c6bf3c097e100c97b462fa980f3379c02431e01a0eca2c9f089f85dc83b4e  ref/DB_CONFIG
+md6-224:6c1529294c3e4372058453c4ca9a854abd8a344dba7cdd7d0bc5723b  ref/DB_CONFIG
+md6-256:7eb1e59ff0bf68f17e7c0cc8ef1a9498e1f30a89193a016cf118f55e41cd1a61  ref/DB_CONFIG
+md6-384:634aec7aee93b541ed6f8768d4cf990dc201a879b400b2988e7fd66fb5e3a19927ba1c7bf0d63a72cb280ff7af9f0393  ref/DB_CONFIG
+md6-512:8e328f0de8623ad3ac6f49214cfce256387e874e8623d56f3b5dc7a79b447ce4dd318c624b2e0083c7fdec90771308f9b2acc610acba136f635eefbb3b475261  ref/DB_CONFIG
+shabal-224:9b99a416da1ba007a20c39243989f38ae32539c45a11e097808c95f5  ref/DB_CONFIG
+shabal-256:849d8a2feedd20c4d87d0143ff1ce223af4e37fe08135d57e9b5a6f5264f87ad  ref/DB_CONFIG
+shabal-384:4ffff843b43e60ca1e17d9bcd743519c9f8c10374ccbb7fd16f4ff894c95de0e220b7fc08f4ef55e525edef3683bc1d0  ref/DB_CONFIG
+shabal-512:19220d5eff720c9451b595b33f133e78370508d9d2b575fbe7ca1aed14119a0e318d9e5f8263f03d8f5f03b6f733df12b6bd3da99d49e2c03be42d089df672c9  ref/DB_CONFIG
+shavite3-224:135056f209684f3d0f0b8e64196247b00d72593e4b79e032750082d8  ref/DB_CONFIG
+shavite3-256:61ad7b88a3c8bac79cdca8574f7557240b7168e6cd52c49fcf04dc71ea7fe7bd  ref/DB_CONFIG
+shavite3-384:99fc0eec77a72f590b8b4bb4acd7c1b76f86e5483ccff6d4b64d390852e795f3b6f9240624dfe99ad1ca69e0d52b5569  ref/DB_CONFIG
+shavite3-512:eb51a3b01e845e65b88033d9e785ecc48f50a1a6ad39fe39c2ef6d35745ff448f3ec30f90cfbda1ec9881a91585a836f81bf0d9c2dd8cd75042cc9251ba26d4b  ref/DB_CONFIG
+simd-224:3a47737dde9f3253a84e4f9ba7cc7fbcb9e6f9bf694fdea52cfd5511  ref/DB_CONFIG
+simd-256:1afd53b87f26f2c35fd237d69dd5b730d7a92a44138b9bbe1be140c521234258  ref/DB_CONFIG
+simd-384:39144d68f9b5dc55b12709aa932948e53f9d8327ddfbb997cfe43b2181c5b97ef9f04b0348f538927321aee93c4b3904  ref/DB_CONFIG
+simd-512:478a6133a166ecc2cabc5835d565596e5aa2ad1a74e4f6126b3cba2347201cfde789fa9d85092f9535d6323807ac270981937b64a1220fdd3a274e1b6416cab3  ref/DB_CONFIG
+tib3-224:b49ce3314c910d2aa87af023598e16b52c7b1eeedb623475e3a3d127  ref/DB_CONFIG
+tib3-256:6565876ed17fb1bb7e037bf491b8f457365a6bec7f779fe71c8346d916dd4afd  ref/DB_CONFIG
+tib3-384:e2c9e40f633f6d2285725a2a41e2f7b9fc9748e7cef544af3e099584682ca0c68a4308f5e9fbbe13658bbe55ce95725e  ref/DB_CONFIG
+tib3-512:a62a149367e88e31599262b6632c8771e50f55e097de9c27532bb4fc5a5b8895fceb820ea4eec3ed1fdfcc81b304afdcfaaadf5163da7e098880ee6f4717c892  ref/DB_CONFIG
+salsa10:dbed509e2d4bb88b2bc830f8dc8beff2da97aabd750acfe14ddf95ed149e4822776966d5c388d4480f33218fe0069d91b1fa2831aabc9aecb61571c385581def  ref/DB_CONFIG
+salsa20:d04db433f17cfd894590f513c870d0fc241cd3e4f78ddacc076ee6faf6db03a3d300ba969f90afc1a70b33618151be856b81e55b2565c860b929a7eacf502ac7  ref/DB_CONFIG
+rmd128:ef0f0270986bde51169110768a36adb8  ref/DB_CONFIG
+rmd160:3686c4d40ae4f15c225f323d1a60001f819d550f  ref/DB_CONFIG
+rmd256:4dc06285af6dfe22b28462e416e00d66f9a9dc2844c61d2388d983caef7adefa  ref/DB_CONFIG
+rmd320:5e4b9ddbc059b0c0b9d2c736528a087408ff7669a5a135f9deea1f31359302119493f06ffd379eaa  ref/DB_CONFIG
+tiger:bdc8d50f67f3e5bcb031f57ec162d61a1cada99a1da93b97  ref/DB_CONFIG
+crc32:5e517329  ref/DB_CONFIG
+crc64:3367a55afa809f37  ref/DB_CONFIG
+adler32:19b2311d  ref/DB_CONFIG
+jlu32:f7e29782  ref/DB_CONFIG
 md2:bc73129d4e085a7fc6855229f6cd6a07  ref/cAos.i386.manifest
 md4:ee0b08300b409ccf9d9ad2fcbe2bf3df  ref/cAos.i386.manifest
 md5:c702512431a26602340ccf07f5e114d9  ref/cAos.i386.manifest
